--- a/gestionPedagogica.html
+++ b/gestionPedagogica.html
@@ -66,35 +66,36 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="drop-down"><a href="index.html">UGEL12</a>
+          <li class="drop-down"><a href="#">UGEL12</a>
             <ul>
               <li><a href="sobreNosotros.html">Sobre nosotros</a></li>
               <li><a href="organigrama.html">Organigrama</a></li>
               <li><a href="InstitucionEducativas.html">Instituciones Educativas</a></li>
+              <li><a href="directorio.html">Direcctorio</a></li>
             </ul>
           </li>
-          <li class="drop-down"><a href="">ESTRUCTURA ORGANICA</a>
+          <li class="drop-down"><a href="#">ESTRUCTURA ORGANICA</a>
             <ul>
-                <li><a href="direccion.html">Direccion</a></li>
-                <li class="drop-down"><a href="apoyo.html">Apoyo</a>
-                  <ul>
-                    <li><a href="apoyo.html">Area de administracion</a></li>
-                  </ul>
-                </li>
-                <li class="drop-down"><a href="control.html">Control</a>
-                  <ul>
-                    <li><a href="control.html">Control Interno</a></li>
-                  </ul>
-                </li>
-                <li class="drop-down"><a href="gestionInstitucional.html">Gestion</a>
-                  <ul>
-                    <li><a href="gestionInstitucional.html">Gestion Institucional</a></li>
-                    <li><a href="gestionPedagogica.html">Gestion Pedagogica</a></li>
-                  </ul>
-                </li>
-              </ul>
+              <li><a href="direccion.html">Direccion</a></li>
+              <li class="drop-down"><a href="apoyo.html">Apoyo</a>
+                <ul>
+                  <li><a href="apoyo.html">Area de administracion</a></li>
+                </ul>
+              </li>
+              <li class="drop-down"><a href="#">Control</a>
+                <ul>
+                  <li><a href="control.html">Control Interno</a></li>
+                </ul>
+              </li>
+              <li class="drop-down"><a href="#">Gestion</a>
+                <ul>
+                  <li><a href="gestionInstitucional.html">Gestion Institucional</a></li>
+                  <li><a href="gestionPedagogica.html">Gestion Pedagogica</a></li>
+                </ul>
+              </li>
+            </ul>
           </li>
-          <li class="drop-down"><a href="serviciosInstitucionales.html">SERVICIO INSTITUCIONALES</a>
+          <li class="drop-down"><a href="#">SERVICIO INSTITUCIONALES</a>
             <ul>
               <li><a href="guiaTramite.html">Guia de tramite</a></li>
               <li><a href="informacionTramite.html">Informacion Tramite</a></li>          
